Adding a menu for later

--- a/index.html
+++ b/index.html
@@ -12,11 +12,30 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+      body {
+        background-color: #f4f4f0;
+      }
+    </style>
   </head>
   <body>
-    <h1>Andrew the Creator</h1>
-    <p>My name is <strong>Andrew Steele</strong>, and I like to make things out of <em>code, words, and wood</em>.</p>
-    <p>Eventually, this site will have more content, but I wanted to just get it started for now.</p>
-    <p><strong>Thanks for visiting!</strong></p>
+    <main class="container">
+      <nav id="mainMenu" class="menu-button first-load">
+        <ul>
+          <li style="--i: 5"><a href="#code">Code</a></li>
+          <li style="--i: 4"><a href="#crafting">Crafting</a></li>
+          <li style="--i: 3"><a href="#games">Games</a></li>
+          <li style="--i: 2"><a href="#writing">Writing</a></li>
+          <li style="--i: 1"><a href="#contact">Contact</a></li>
+        </ul>
+        <div id="mainMenuButton">😀</div>
+      </nav>
+      <section id="home">
+        <h1>Andrew the Creator</h1>
+        <p><em>aka Andrew Steele</em></p>
+        <p>You've met me at a very... peculiar time in my life. My brain has splintered into many, many pieces. I am simultaneously involved in the varied worlds of web software programming, writing, whittling, magic, </p>
+      </section>
+      <section id="code"></section>
+    </main>
   </body>
 </html>
