Fleshing out the site with placeholders

--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrew the Creator</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.min.css"
-      integrity="sha512-xiunq9hpKsIcz42zt0o2vCo34xV0j6Ny8hgEylN3XBglZDtTZ2nwnqF/Z/TTCc18sGdvCjbFInNd++6q3J0N6g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css" />
     <style>
       body {
+        font-family: "Roboto Slab", serif;
         background-color: #f4f4f0;
       }
     </style>
@@ -22,6 +19,7 @@
     <main class="container">
       <nav id="mainMenu" class="menu-button first-load">
         <ul>
+          <li style="--i: 6"><a href="#home">Home</a></li>
           <li style="--i: 5"><a href="#code">Code</a></li>
           <li style="--i: 4"><a href="#crafting">Crafting</a></li>
           <li style="--i: 3"><a href="#games">Games</a></li>
@@ -33,9 +31,27 @@
       <section id="home">
         <h1>Andrew the Creator</h1>
         <p><em>aka Andrew Steele</em></p>
-        <p>You've met me at a very... peculiar time in my life. My brain has splintered into many, many pieces. I am simultaneously involved in the varied worlds of web software programming, writing, whittling, magic, </p>
+        <p>
+          You've met me at a very... peculiar time in my life. My brain has splintered into many, many pieces. I am
+          simultaneously involved in the varied worlds of web software programming, writing, whittling, wizardry (magic
+          tricks), and whatever strikes my fancy at the moment (I have ADHD).
+        </p>
       </section>
-      <section id="code"></section>
+      <section id="code">
+        <p>Code samples and such go here.</p>
+      </section>
+      <section id="crafting">
+        <p>Crafting samples and such go here.</p>
+      </section>
+      <section id="games">
+        <p>Gaming samples and such go here.</p>
+      </section>
+      <section id="writing">
+        <p>Writing samples and such go here.</p>
+      </section>
+      <section id="contact">
+        <p>Info on how to contact me, should you for some reason desire to do so, will eventually go here.</p>
+      </section>
     </main>
   </body>
 </html>
