Major updates to website - New content - Switched from Millgram to Tailwind - Placeholders added for future content.

--- a/index.html
+++ b/index.html
@@ -5,35 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andrew the Creator</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
       body {
-        font-family: "Roboto Slab", serif;
         background-color: #f4f4f0;
-        font-size: 18px;
       }
-      main.container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        max-width: 90%;
-      }
-      nav {
-        position: absolute;
-        bottom: 15px;
-        left: 15px;
-      }
-      nav ul {
-        transform: skewY(-15deg);
-        list-style: none;
+      nav ul li {
+        display: inline-block;
+        padding-right: 0.25rem;
+        border-right: 1px solid #333;
       }
       section {
         display: none;
@@ -42,30 +22,40 @@
         display: block;
         background-color: #fefefe;
         border: 1px solid #333;
-        padding: 1em;
+        padding: 1rem;
+        width: 90%;
       }
     </style>
   </head>
   <body>
-    <main class="container">
-      <nav id="mainMenu" class="menu-button first-load">
-        <ul>
-          <li style="--i: 6"><a href="#home">Home</a></li>
-          <li style="--i: 5"><a href="#code">Code</a></li>
-          <li style="--i: 4"><a href="#crafting">Crafting</a></li>
-          <li style="--i: 3"><a href="#games">Games</a></li>
-          <li style="--i: 2"><a href="#writing">Writing</a></li>
-          <li style="--i: 1"><a href="#contact">Contact</a></li>
-        </ul>
-        <div id="mainMenuButton">😀</div>
-      </nav>
+    <nav id="mainMenu" class="absolute bottom-3 left-2">
+      <ul class="list-none">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#code">Code</a></li>
+        <li><a href="#crafting">Crafting</a></li>
+        <li><a href="#games">Games</a></li>
+        <li><a href="#writing">Writing</a></li>
+        <li class="border-none"><a href="#contact">Contact</a></li>
+      </ul>
+      <div id="mainMenuButton">😀</div>
+    </nav>
+    <main class="flex justify-center items-center h-screen">
       <section id="home">
-        <h1>Andrew the Creator</h1>
-        <p><em>aka Andrew Steele</em></p>
+        <h1 class="text-xl font-bold">Andrew the Creator</h1>
         <p>
-          You've met me at a very... peculiar time in my life. My brain has splintered into many, many pieces. I am
-          simultaneously involved in the varied worlds of web software programming, writing, whittling, wizardry (magic
+          <em
+            >aka Andrew565
+            <br />
+            aka Andrew Steele
+          </em>
+        </p>
+        <p class="mt-6">
+          Hello! I am involved in the varied worlds of web software programming, writing, whittling, wizardry (magic
           tricks), and whatever strikes my fancy at the moment (I have ADHD).
+        </p>
+        <p class="mt-6">
+          Please select from the menu at the bottom of the page an area of interest of mine that you would like to learn
+          more about!
         </p>
       </section>
       <section id="code">
@@ -84,5 +74,10 @@
         <p>Info on how to contact me, should you for some reason desire to do so, will eventually go here.</p>
       </section>
     </main>
+    <script>
+      if (!window.location.hash) {
+        window.location.hash = "home";
+      }
+    </script>
   </body>
 </html>
