Updated home page

--- a/index.html
+++ b/index.html
@@ -72,12 +72,26 @@
         <p class="leading-relaxed my-4">
           <a class="underline mr-2" href="https://www.linkedin.com/in/andrew-steele-0509a4169/">LinkedIn</a>
           <a class="underline mr-2" href="https://github.com/Andrew565">GitHub</a>
-          <a class="underline mr-2" href="https://dev.to/andrew565">Dev.to</a>
+          <a class="underline mr-2" href="#resume">Resumé</a>
         </p>
         <p class="leading-relaxed">
-          I am a staff-level, front end software engineer and a storyteller. I write stories, poems, and plays, and
-          enjoy making games that blend traditional gameplay with modern technology. Whether I’m building a website or
-          crafting a narrative, my goal is to create something meaningful and memorable.
+          I am a staff-level, front end software engineer and a storyteller. Here's what I bring to every role:
+        </p>
+        <ul class="list-disc list-inside my-4">
+          <li>20+ years of experience</li>
+          <li>Expertise in HTML, CSS, and JavaScript</li>
+          <li>Experience with React, Web Components, and other frameworks</li>
+          <li>
+            Proven <a class="underline" href="#resume">track record</a> of success in civilian and government arenas
+          </li>
+          <li>Strong problem-solving skills</li>
+          <li>Excellent communication skills</li>
+          <li>Ability to work independently and as part of a team</li>
+        </ul>
+        <p class="leading-relaxed">
+          Check out my <a class="underline" href="#resume">resumé</a> for more of my history, or take a peek at some of
+          my <a class="underline" href="#code">code examples</a> and some of the
+          <a class="underline" href="#articles">articles</a> I've written.
         </p>
       </section>
       <section id="about-me">
