Another minor tweak to the homepage

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
           <a class="underline mr-2" href="#resume">Resumé</a>
         </p>
         <p class="leading-relaxed">
-          I am a staff-level, front end software engineer and a storyteller. Here's what I bring to every role:
+          I am a staff-level, front end software engineer. I excel at untangling legacy code and making it more modern,
+          adding and updating automated testing, and working with designers to realize their concepts. Here's what I
+          bring to every role:
         </p>
         <ul class="list-disc list-inside my-4">
           <li>20+ years of experience</li>
