--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
         <h1 class="text-2xl font-bold">Articles</h1>
         <article>
           <h2 class="my-4 text-xl">
+            <a class="underline" href="https://dev.to/andrew565/an-introduction-to-narrative-coding-4fed"
+              >An Introduction to Narrative Coding</a>
+          </h2>
+          <p>
+            A look at "Narrative Coding", a technique of using extra comments and descriptive names to tell a story with your code.
+          </p>
+        </article>
+        <article>
+          <h2 class="my-4 text-xl">
             <a class="underline" href="https://dev.to/andrew565/hafcaf-the-no-framework-spa-solution-for-everyone-ckj"
               >hafcaf - The No-Framework SPA Solution for Everyone</a
             >
