Adding wallpapers image for wallpapers article

--- a/index.html
+++ b/index.html
@@ -211,6 +211,16 @@
         </article>
         <article>
           <h2 class="my-4 text-xl">
+            <a class="underline" href="https://dev.to/andrew565/my-crazy-ios-wallpapers-setup-44ee-temp-slug-3360853"
+              >My Crazy iOS Wallpapers Setup</a>
+          </h2>
+          <img src="./assets/img/wallpapers.png" width="360"/>
+          <p>
+            How I use a small army of iOS Shortcuts to manage my 2000+ wallpapers collection and keep things fresh!
+          </p>
+        </article>
+        <article>
+          <h2 class="my-4 text-xl">
             <a class="underline" href="https://dev.to/andrew565/hafcaf-the-no-framework-spa-solution-for-everyone-ckj"
               >hafcaf - The No-Framework SPA Solution for Everyone</a
             >
