Adding woodcraft and games content

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <section id="writing">
           <h2 class="text-3xl mb-6">Writing & Poetry</h2>
           <article class="prose prose-stone max-w-none">
-            <p class="mb-6 italic">
+            <p class="mb-6 text-stone-600 italic">
               A short poem I wrote while trying to come up with content for this
               space:
             </p>
@@ -494,32 +494,85 @@
         <!-- Crafting Section -->
         <section id="crafting">
           <h2 class="text-3xl mb-6">Crafts & Woodworking</h2>
-          <p class="text-stone-600 italic">
-            "In a world of ephemeral bits, there is something profound about the
-            weight of a hand-carved spoon."
-          </p>
-          <div
-            class="mt-8 p-8 bg-stone-100 border border-stone-200 rounded text-center"
-          >
-            <p class="text-stone-500">
-              I'm currently setting up my digital workshop. Photos of whittled
-              creations and woodworking projects coming soon.
+          <article class="prose prose-stone max-w-none">
+            <p class="mt-8 text-stone-600">
+              I recently made some wooden worry stones for myself and one of my
+              kids. They got a rainbow because they're so colorful, I got a
+              diamond because I'm a diamond in the rough!
             </p>
-          </div>
+            <img
+              src="assets/img/wooden-worry-stones.jpg"
+              class="mt-4 rounded shadow-sm max-w-xs"
+            />
+          </article>
         </section>
 
         <!-- Games Section -->
         <section id="games">
           <h2 class="text-3xl mb-6">Games</h2>
-          <p class="text-stone-600 italic">"Play. Create. Explore."</p>
-          <div
-            class="mt-8 p-8 bg-stone-100 border border-stone-200 rounded text-center"
-          >
-            <p class="text-stone-500">
-              I'm currently setting up my digital workshop. Gaming projects
-              coming soon.
+          <article class="project-card">
+            <h3 class="text-2xl mb-2">
+              <a
+                class="hover:underline"
+                href="https://github.com/Andrew565/ProjectMO"
+                >MATR1X 0VERL0AD</a
+              >
+            </h3>
+            <p class="text-stone-600">
+              A digital recreation of
+              <a href="https://notwriting.itch.io/matrix-overload">
+                Michael Elliot's
+              </a>
+              cyberpunk card game. Built with plain JS and my custom
+              DeckOfCards.js library.
             </p>
-          </div>
+            <a
+              href="https://andrew565.github.io/ProjectMO/"
+              class="btn-link text-sm mt-2 inline-block"
+              >Play Online →</a
+            >
+          </article>
+          <article class="project-card">
+            <h3 class="text-2xl mb-2">
+              <a
+                class="hover:underline"
+                href="https://github.com/Andrew565/project-clearTD"
+              >
+                Clear the Dungeon
+              </a>
+            </h3>
+            <p class="text-stone-600">
+              Designed by Mark S. Ball of
+              <a href="https://www.youtube.com/watch?v=_rnbKvUwtn0"
+                >Riffle, Shuffle, and Roll</a
+              >. Developed by me with help from Google Gemini and Antigravity,
+              this is another modern solitaire card game faithfully recreated
+              digitally.
+            </p>
+            <a
+              href="https://andrew565.github.io/project-clearTD/"
+              class="btn-link text-sm mt-2 inline-block"
+              >Play Online →</a
+            >
+          </article>
+          <article class="project-card">
+            <h3 class="text-2xl mb-2">
+              <a
+                class="hover:underline"
+                href="https://github.com/Andrew565/soul-solitaire"
+                >Soul Solitaire</a
+              >
+            </h3>
+            <p class="text-stone-600">
+              My first digital recreation of a modern solitaire card game. Based
+              on Hoki by <a href="https://mekmekgames.com">Mek Mek Games</a>.
+            </p>
+            <a
+              href="https://andrew565.github.io/soul-solitaire/"
+              class="btn-link text-sm mt-2 inline-blo ck"
+              >Play Online →</a
+            >
+          </article>
         </section>
 
         <footer
